Implemented updateAuthenticatedUser endpoint
