# src/routes/v1/userRouter.ts
@@ -2,30 +2,30 @@ import { Router } from 'express';
 import { notAllowedMethod } from '../../middlewares/notAllowedHandler';
 import {
   getUser,
-  updateUser,
+  updateAuthenticatedUser,
   getUserSkills,
   updateUserSkills,
 } from '../../controllers/userController';
 import { authenticate, authorizedRoles } from '../../middlewares/authMiddlewares';
 import { Role } from '@prisma/client';
 import requestValidator from '../../middlewares/requestValidator';
-import { updateUserSchema, updateUserSkillsSchema } from '../../validators/validate.user'
-
-const { ADMIN, MENTEE, MENTOR, COMMUNITY_MANAGER } = Role;
+import { updateUserSchema, updateUserSkillsSchema } from '../../validators/validate.user';
 
 const userRouter = Router();
+
+userRouter.route('/me')
+  .patch(
+    authenticate({ access: 'full' }),
+    requestValidator({ bodySchema: updateUserSchema }),
+    updateAuthenticatedUser,
+  )
+  .all(notAllowedMethod);
 
 userRouter.route('/:id')
   .get(
     authenticate({ access: 'full' }),
     authorizedRoles('*'),
     getUser,
-  )
-  .patch(
-    authenticate({ access: 'full' }),
-    authorizedRoles('*'),
-    requestValidator({ bodySchema: updateUserSchema }),
-    updateUser,
   )
   .all(notAllowedMethod);
 
