# src/validators/validate.user.ts
@@ -1,13 +1,12 @@
 import Joi from 'joi';
 
-import { validateContryAlpha3Code } from './validator.custom';
+import { validateContryAlpha3Code, validateIANADatabaseTimeZone } from './validator.custom';
 
 const updateUserSchema = Joi.object({
   name: Joi.string()
     .min(3)
-    .max(32),
+    .max(50),
   headline: Joi.string()
-    .min(3)
     .max(50),
   bio: Joi.string()
     .max(1000),
@@ -17,16 +16,20 @@ const updateUserSchema = Joi.object({
     .messages({
       'string.alpha3Code': 'Country name must be a valid ISO 3166-1 alpha-3 code',
     }),
-  imageUrl: Joi.string()
-    .uri({ scheme: 'https' }),
-  linkedInUrl: Joi.string()
-    .uri({ scheme: 'https' })
-    .regex(/^https:\/\/(www\.)?linkedin\.com\/(in)\/[a-zA-Z0-9-_%]+\/?$/)
-    .message('Invalid LinkedIn profile URL. It should be in the format: https://www.linkedin.com/in/username'),
-  gitHubUrl: Joi.string()
-    .uri({ scheme: 'https' })
-    .regex(/^https:\/\/github\.com\/[a-zA-Z0-9-]+$/)
-    .message('Invalid GitHub profile URL. It should be in the format: https://github.com/username'),
+  timezone: Joi.string()
+    .custom(validateIANADatabaseTimeZone)
+    .messages({
+      'string.IANADataBaseTimeZone': 'timezone must be a valid IANA time zone',
+    }),
+  skills: Joi.array()
+    .items(Joi.string().trim().max(50))
+    .max(300)
+    .messages({
+      'array.max': 'You can provide up to 300 skills only',
+      'array.includes': 'Each skill must be a string',
+      'string.max': 'Each skill must be at most 50 characters long',
+    }),
+
 
 }).min(1).message('At least 1 attribute should be provided to update');
 
